--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "prebuild": "node scripts/copyDataFiles.js",
+    "build": "react-scripts build && npm run postbuild",
+    "postbuild": "cp public/*.json build/",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
