error loading .json

--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "prebuild": "node scripts/copyDataFiles.js",
-    "build": "react-scripts build && npm run postbuild",
-    "postbuild": "cp public/*.json build/",
+    "build": "react-scripts build && npm run copy-json && npm run verify-build",
+    "copy-json": "cp public/*.json build/",
+    "verify-build": "node scripts/verify-build.js",
+    "vercel-build": "npm run build && echo 'Vercel build complete'",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
