--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,34 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "build",
-  "publicDirectory": "public",
-  "routes": [
+  "framework": "create-react-app",
+  "headers": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" }
+      "source": "/en_kjv.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
     },
-    { "src": "/en_kjv.json", "dest": "/en_kjv.json", "headers": { "content-type": "application/json" } },
-    { "src": "/crossRefs.json", "dest": "/crossRefs.json", "headers": { "content-type": "application/json" } },
-    { "src": "/favicon.ico", "dest": "/favicon.ico" },
-    { "src": "/logo192.png", "dest": "/logo192.png" },
-    { "src": "/manifest.json", "dest": "/manifest.json" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "source": "/crossRefs.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    }
   ]
 }
