--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compression": "^1.7.4",
     "cra-template": "1.2.0",
     "express": "^4.18.2",
     "lucide-react": "^0.475.0",
@@ -25,6 +26,7 @@
     "copy-json": "cp public/*.json build/",
     "verify-build": "node scripts/verify-build.js",
     "vercel-build": "npm run build && echo 'Vercel build complete'",
+    "vercel-start": "node index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
