--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build && npm run copy-json",
     "copy-json": "node -e \"const fs=require('fs');const path=require('path');const publicDir=path.join(process.cwd(),'public');const buildDir=path.join(process.cwd(),'build');fs.readdirSync(publicDir).filter(f=>f.endsWith('.json')).forEach(file=>{fs.copyFileSync(path.join(publicDir,file),path.join(buildDir,file));console.log('Copied '+file);});\"",
     "verify-build": "node scripts/verify-build.js",
-    "vercel-build": "react-scripts build && npm run copy-json",
+    "vercel-build": "CI=false react-scripts build && npm run copy-json",
     "vercel-start": "node index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
