--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,29 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/en_kjv.json",
+      "src": "^/static/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*\\.(json))",
+      "headers": { "content-type": "application/json" },
       "dest": "/index.js"
     },
     {
-      "src": "/crossRefs.json",
-      "dest": "/index.js"
+      "src": "/(.*\\.(js|css|svg|png|jpg|jpeg|gif|ico|html))",
+      "dest": "/$1"
     },
     {
       "src": "/api/(.*)",
@@ -21,7 +34,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/index.js"
+      "dest": "/index.html"
     }
   ]
 }
