--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "clsx": "^2.1.1",
     "compression": "^1.7.4",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "lucide-react": "^0.475.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
@@ -21,7 +23,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build && npm run copy-json",
     "copy-json": "node -e \"const fs=require('fs');const path=require('path');const publicDir=path.join(process.cwd(),'public');const buildDir=path.join(process.cwd(),'build');fs.readdirSync(publicDir).filter(f=>f.endsWith('.json')).forEach(file=>{fs.copyFileSync(path.join(publicDir,file),path.join(buildDir,file));console.log('Copied '+file);});\"",
     "verify-build": "node scripts/verify-build.js",
