--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
   "version": 2,
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 60
+    },
+    "index.js": {
+      "maxDuration": 60
+    }
+  },
   "builds": [
     {
       "src": "index.js",
